// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - JobTitleLink should bold keyword 1`] = `
<Link
  className="jobTitleLink"
  link="/jobCard"
  onClick={[Function]}
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle titleKeyword"
    key="0"
    strong={true}
    whistling={true}
  >
    Software
  </Text>
  <Text
    baseline={true}
    className="jobTitle"
    key="1"
    strong={true}
    whistling={true}
  >
     Engineer
  </Text>
</Link>
`;

exports[`JobCard - JobTitleLink should change className for viewed job 1`] = `
<Link
  className="jobTitleLinkVisited"
  link="/jobCard"
  onClick={[Function]}
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    whistling={true}
  >
    Software Engineer
  </Text>
</Link>
`;

exports[`JobCard - JobTitleLink should render LinkComponent when it is provided 1`] = `
<LinkComponent
  className="jobTitleLink"
  link="/jobCard"
  onClick={[Function]}
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    key="0"
    strong={true}
    whistling={true}
  >
    Software 
  </Text>
  <Text
    baseline={true}
    className="jobTitle titleKeyword"
    key="1"
    strong={true}
    whistling={true}
  >
    Engineer
  </Text>
</LinkComponent>
`;

exports[`JobCard - JobTitleLink should render correctly 1`] = `
<Link
  className="jobTitleLink"
  link="/jobCard"
  onClick={[Function]}
  rel="noopener noreferrer"
>
  <Text
    baseline={true}
    className="jobTitle"
    strong={true}
    whistling={true}
  >
    Software Engineer
  </Text>
</Link>
`;
